# Radiant

./: .clang-format  .gitignore  CMakeLists.txt
Assets/: build_graph.bat
Assets/Shaders/: BasicTriangle.slang  DepthPrePass.slang  FullScreenClearPass.slang  FullScreenQuad.slang  FullScreenQuadUtilShader.slang  PBR.slang  SSAO.slang  ThreadGroupTilingX.slang  bend_sss_gpu.h  blinn_phong.slang  bloom_downsample_compute.slang  bloom_upsample_blur_compute.slang  circle.slang  circle_slow.slang  csm.slang  depth_pre_pass.slang  final.slang  kernels.slang  light_clusters_assignment.slang  light_clusters_build.slang  light_clusters_defines.hpp  main_pass_bc_compressed.slang  mip_building.slang  pbr_bloom_downsample.slang  pbr_bloom_upsample_blur.slang  points2d.slang  radiance_cascades_defines..hpp  screen_space_shadows.slang  shaders.slang  skybox.slang  ssao_box_blur.slang
Assets/Shaders/anti_aliasing/: fxaa.slang
Assets/Shaders/aw2/: aw2_defines.hpp  hzb.slang  shade_main.slang  triangle_mesh_shader.slang
Assets/Shaders/bloom/: bloom_defines.hpp  bloom_downsample_compute.slang  bloom_upsample_blur_compute.slang  pbr_bloom_downsample.slang  pbr_bloom_upsample_blur.slang
Assets/Shaders/clustered_shading/: light_clusters_assignment.slang  light_clusters_build.slang  light_clusters_defines.hpp  light_clusters_detect_active.slang
Assets/Shaders/common/: FullScreenQuad.slang  depth_pre_pass.slang
Assets/Shaders/csm/: csm.slang  csm_defines.hpp  csm_pass.slang  depth_reduction.slang  setup_csm.slang
Assets/Shaders/debug/: texture_view.slang
Assets/Shaders/ibl_utils/: cubemap.slang  equirectangular_to_cubemap.slang  generate_brdf_lut.slang  generate_irradiance_cube.slang  generate_prefiltered_cube.slang  skybox.slang
Assets/Shaders/radiance_cascades/: points2d.slang  radiance_cascades_defines.hpp
Assets/Shaders/shadows/: csm_defines.hpp  csm_pass.slang  depth_reduction.slang  final.slang  setup_csm.slang  shading_pbr_bc_compressed.slang  sss.slang  tile_based_omni_shadows.slang
Assets/Shaders/ssao/: ssao.slang  ssao_box_blur.slang  ssao_box_blur_cs.slang  ssao_cs.slang  ssao_defines.hpp
Assets/Shaders/ssr/: ssr_defines.hpp
Assets/Shaders/sss/: screen_space_shadows.slang  sss.slang
Assets/Shaders/tiled_shading/: light_tiles_compute_frustums.slang  light_tiles_cull.slang  light_tiles_defines.hpp
Drafts/: Corutine_Simple.txt  Curious_Task.txt  Qsort.txt  Self-made_ThreadPool.txt
Drafts/cpp_samples/: CRTP_0.txt  CRTP_Rule.txt  CRTP_Tests.txt
Source/: EntryPoint.cpp  ShaderDefines.h  ShaderDefines.hpp  pch.h
Source/Core/: Application.cpp  Application.hpp  Core.hpp  CoreTypes.hpp  Log.cpp  Log.hpp  Math.hpp  PlatformDetection.hpp
Source/Core/Window/: GLFWWindow.cpp  GLFWWindow.hpp  Window.hpp
Source/Render/: Camera.hpp  CoreDefines.hpp  GfxBuffer.cpp  GfxBuffer.hpp  GfxCommandBuffer.hpp  GfxContext.cpp  GfxContext.hpp  GfxDevice.cpp  GfxDevice.hpp  GfxPipeline.cpp  GfxPipeline.hpp  GfxShader.cpp  GfxShader.hpp  GfxTexture.cpp  GfxTexture.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphDefines.hpp  Renderer.hpp  Streamer.hpp
Source/Render/RHI/Vulkan/: VulkanGfxBuffer.hpp  VulkanGfxTexture.hpp  VulkanRenderSystem.cpp  VulkanRenderSystem.hpp
Source/Render/RenderGraph/: RenderGraph.hpp
Source/Render/Renderers/: ImGuiRenderer.cpp  ImGuiRenderer.hpp  Renderer.cpp  Renderer.hpp
Source/Render/Renderers/AW2/: AW2World.cpp  AW2World.hpp  AlanWake2Renderer.cpp  AlanWake2Renderer.hpp  AlanWake2Scene.cpp  AlanWake2Scene.hpp
Source/Render/Renderers/BlinnPhong/: ForwardRenderer.cpp  ForwardRenderer.hpp
Source/Render/Renderers/Combined/: CombinedRenderer.cpp  CombinedRenderer.hpp
Source/Render/Renderers/Common/: DebugRenderer.cpp  DebugRenderer.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  MipBuilder.cpp  MipBuilder.hpp
Source/Render/Renderers/Particle/: ParticleRenderer.cpp  ParticleRenderer.hpp
Source/Render/Renderers/SSGI/: SSGIRenderer.cpp  SSGIRenderer.hpp
Source/Render/Renderers/Shadows/: ShadowsRenderer.cpp  ShadowsRenderer.hpp
Source/Render/Renderers/SimpleRenderer/: ForwardRenderer.cpp  ForwardRenderer.hpp
Source/Scene/: Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp
Source/Systems/: RenderSystem.cpp  RenderSystem.hpp
